Increased the z-index of the header to prevent the content from overlapping it when scrolling.

--- a/css/app.css
+++ b/css/app.css
@@ -65,7 +65,8 @@ body {
     clear: both; }
 
 main {
-  margin-top: 115px; }
+  margin-top: 115px;
+  z-index: 9999; }
 
 header#top {
   position: fixed;
