--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -16,6 +16,7 @@ $total-width: 100%;
 
 main {
   margin-top: 115px;
+  z-index: 9999;
 }
 
 header#top {
